--- a/plugins/Agregator/catering.html
+++ b/plugins/Agregator/catering.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<body xml:lang="cs" ns="https://www.steakgrill.cz" data-image="/files/preview/DSC_4879.jpg">
+<body xml:lang="cs" ns="https://www.steakgrill.cz" class="catering" data-image="/files/preview/DSC_4879.jpg">
   <h id="catering" author="InternetGuru" ctime="2018-02-20">Objednávka cateringu</h>
   <desc>Po odeslání objednávky Vás budeme do tří pracovních dnů kontaktovat s doplňujícími informacemi a cenovou nabídkou.</desc>
   <p var="contactform-catering">Cateringový formulář není k dispozici</p>
