--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -5,24 +5,24 @@
 
   <dl>
     <dt>Terminologie a pravopis</dt>
-    <dd>Minimalizujte používání cizích termínů a žargonu! Ujistěte se, že neexistuje vhodný překlad. Čeští uživatelé preferují srozumitelnou (spisovnou) češtinu. Neznámé termíny je spíše odrazují.</dd>
-    <dd>Cizí termíny vždy patřičně vysvětlete, přeložte či opište (např. <samp>vývar</samp> a nikoli <del><samp>browth</samp></del>). Případně můžete použít interaktivní slovník pojmů, např. <a var="definition-sous-vide">sous-vide</a>.</dd>
+    <dd>Minimalizujte používání cizích termínů a žargonu! V opačném případě se ujistěte, že neexistuje vhodný překlad (např. <samp>vývar</samp> a nikoli <del><samp>browth</samp></del>). Čeští čtenáři preferují srozumitelnou (spisovnou) češtinu.</dd>
+    <dd>Cizí termíny vždy patřičně vysvětlete, přeložte či opište. Můžete použít interaktivní slovník pojmů, např. <a var="definition-sous-vide">sous-vide</a>.</dd>
     <dd>Pozor na správné použití cizích termínů (např. <samp>au jus</samp> a nikoli <del><samp>Jus</samp></del>).</dd>
-    <dd>K ověření pravopisu můžete použít <a href="http://prirucka.ujc.cas.cz/" title="Internetová jazyková příručka">internetovou příručku</a> či internet obecně.</dd>
+    <dd>K ověření pravopisu můžete použít <a href="http://prirucka.ujc.cas.cz/" title="Internetová jazyková příručka">internetovou příručku</a> či internet obecně. Základní kontrola pravopisu je i v prohlížeči. Ujistěte se, že je zapnutá.</dd>
     <dt>Konzistence</dt>
-    <dd>Začínejte každou informaci (každý řádek v poli administrace) velkým písmenem.</dd>
-    <dd>Pokud si nejste jistý, jak napsat např. cenu nebo rozmezí cen, zkopírujte text ze stálé nabídky a upravte ho.</dd>
-    <dd>Za popis jídla patří tečka (v rámci konzistence). Tím pádem by mělo jít o větu, která obsahuje podmět a přísudek (nikoli jakoby pokračování nadpisu).</dd>
-    <dd>Vkládejte text vždy se zachováním standardní velikosti písmen. Slova VELKÝMI PÍSMENY mohou být interpretovaná jako zkratky (např. slovo <samp>JEHNĚ</samp> mohou čtečky číst jako <em>jé-é-há-en-ésháčkem</em>). O zobrazení se postará styl, který může písmena jakkoli transformovat (včetně zvětšení). Poznámka: běžný text VELKÝMI PÍSMENY je navíc na internetu považován za křik.</dd>
+    <dd>Začínejte každou informaci (každý řádek v poli administrace) a každou větu velkým písmenem. Nezačínejte číslem, pokud to je možné. Jinak číslo přepište slovně (např. <samp>Tři vejce do skla</samp> a nikoli <del><samp>3 vejce do skla</samp></del>).</dd>
+    <dd>Pokud si nejste jistí, jak napsat např. cenu nebo rozmezí cen, zkopírujte text např. ze stálé nabídky nebo z předchozího údaje a upravte ho.</dd>
+    <dd>Za každou větou (a tedy i za popisem jídla) musí být tečka. Každá věta by měla obsahovat podmět a přísudek (nikoli jakože pokračování nadpisu).</dd>
+    <dd>Vkládejte text vždy se zachováním standardní velikosti písmen. Slova <em>VELKÝMI PÍSMENY</em> se špatně čtou a chybně interpretují (např. <samp>VYPIL DO DNA</samp> může čtečka přečíst jako <em>vypil do dé-en-á</em>).</dd>
     <dt>Typografie</dt>
     <dd>V anglických nadpisech patří velká písmena na začátek jednotlivých slov (např. <samp>Scotch Broth</samp>, <samp>Pepper Steak</samp>). V českých nadpisech jen na začátek (např. <samp>Hovězí vývar</samp>, <samp>Tatarský steak</samp>).</dd>
-    <dd>Rozlišujte pomlčku (<samp>–</samp>) a rozdělovník (<samp>-</samp>), případně anglickou pomlčku (<samp>—</samp>). Pokud pomlčka rozděluje pouze dvě slova, nepatří kolem ní mezery (<samp>1.–2. května</samp>). V opačném případě kolem pomlčky mezery v češtině patří (<samp>30. dubna – 1. května</samp>).</dd>
-    <dd>Rozlišujte <samp>„české“</samp> a <samp>“anglické”</samp> uvozovky od znaku pro palce (<samp>"</samp>).</dd>
+    <dd>Rozlišujte pomlčku (<samp>–</samp>) a rozdělovník (<samp>-</samp>). Pokud pomlčka rozděluje pouze dvě slova, nepatří kolem ní mezery (<samp>1.–2. května</samp>). V opačném případě kolem pomlčky mezery patří (<samp>30. dubna – 1. května</samp>).</dd>
+    <dd>Rozlišujte <samp>„české“</samp> a <samp>“anglické”</samp> uvozovky a znak pro palec (<samp>"</samp>).</dd>
     <dd>Apostrof a čárka jsou rozdílné znaky, tedy např. <samp>Fisherman's Chowder</samp> a nikoli <del><samp>Fisherman´s Chowder</samp></del> či <del><samp>Fisherman`s Chowder</samp></del>.</dd>
-    <dd>Mezi číslo a jednotku patří mezera, pokud se jedná o dvě slova (např. <samp>sto gramů = 100 g</samp>, kdežto <samp>stogramový = 100g</samp>). Totéž platí např. pro procenta a další znaky.</dd>
+    <dd>Mezi číslo a jednotku patří mezera, pokud se jedná o dvě slova (např. <samp>100 g = sto gramů</samp>, kdežto <samp>100g = stogramový</samp>). Totéž platí např. pro procenta a další znaky.</dd>
     <dd>Na velikosti písmen záleží; zejména také u jednotek (např. <samp>g = gram</samp>, <samp>G = giga</samp>).</dd>
     <dd>Za interpunkční znaménka (jako je tečka, čárka atp.) patří mezera, až na výjimky jako např. konec závorky v této větě.</dd>
-    <dd>Mezi některá slova patří <a var="definition-nbsp">pevná mezera</a>. Jedná se o veškerá <a var="definition-zalomeni-radku">slova nevhodná na konec řádku</a> (jako např. jednopísmenné předložky) bez ohledu na jejich umístění v textu, neboť při tisku či na jiném zařízení se mohou vyskytnout na konci řádku.</dd>
+    <dd>Mezi některá slova patří <a var="definition-nbsp">pevná mezera</a> (<samp>&#160;</samp>). Jedná se o veškerá <a var="definition-zalomeni-radku">slova nevhodná na konec řádku</a> (jako např. jednopísmenné předložky) bez ohledu na jejich umístění v textu, neboť při tisku či na jiném zařízení se mohou vyskytnout na konci řádku.</dd>
   </dl>  
  
   <form class="editable fillable validable validateform-10 eventable-noevent" id="inputvarform" action="/" method="post" var="action@action">
