--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -13,7 +13,7 @@
     <dd>Začínejte každou informaci (každý řádek v poli administrace) a každou větu velkým písmenem. Nezačínejte číslem, pokud to je možné. Jinak číslo přepište slovně (např. <samp>Tři vejce do skla</samp> a nikoli <del><samp>3 vejce do skla</samp></del>).</dd>
     <dd>Pokud si nejste jistí, jak napsat např. cenu nebo rozmezí cen, zkopírujte text např. ze stálé nabídky nebo z předchozího údaje a upravte ho.</dd>
     <dd>Za každou větou (a tedy i za popisem jídla) musí být tečka. Každá věta by měla obsahovat podmět a přísudek (nikoli jakože pokračování nadpisu).</dd>
-    <dd>Vkládejte text vždy se zachováním standardní velikosti písmen. Slova <em>VELKÝMI PÍSMENY</em> se špatně čtou a chybně interpretují (např. <samp>VYPIL DO DNA</samp> může čtečka přečíst jako <em>vypil do dé-en-á</em>).</dd>
+    <dd>Vkládejte text vždy se zachováním standardní velikosti písmen. Slova psaná velkými písmeny se špatně čtou a chybně interpretují (např. <samp>VYPIL DO DNA</samp> může čtečka přečíst jako <em>„vypil do dé-en-á“</em>).</dd>
     <dt>Typografie</dt>
     <dd>V anglických nadpisech patří velká písmena na začátek jednotlivých slov (např. <samp>Scotch Broth</samp>, <samp>Pepper Steak</samp>). V českých nadpisech jen na začátek (např. <samp>Hovězí vývar</samp>, <samp>Tatarský steak</samp>).</dd>
     <dd>Rozlišujte pomlčku (<samp>–</samp>) a rozdělovník (<samp>-</samp>). Pokud pomlčka rozděluje pouze dvě slova, nepatří kolem ní mezery (<samp>1.–2. května</samp>). V opačném případě kolem pomlčky mezery patří (<samp>30. dubna – 1. května</samp>).</dd>
