--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -4,17 +4,21 @@
   <desc kw="administrace, InputVar">Při úpravě textů dbejte na <a href="https://cs.wikipedia.org/wiki/Wikipedie:Typografick%C3%A9_rady" title="Wikipedie: Typografické rady">obecná pravidla typografie</a>, zejména pak na výčet typických nedostatků (níže). Před uložením si texty po sobě přečtěte s odstupem aspoň několika minut. Po uložení si texty projděte znovu, ideálně požádejte kolegu. Pro skrytí jídla nechte pole prázdné.</desc>
 
   <dl class="hideable hideable-hidden">
-    <dt data-here="">Terminologie a pravopis</dt>
+    <dt>Terminologie a pravopis</dt>
     <dd>Minimalizujte používání cizích termínů a žargonu! V opačném případě se ujistěte, že neexistuje vhodný překlad (např. <samp>vývar</samp> a nikoli <del><samp>browth</samp></del>). Čeští čtenáři preferují srozumitelnou (spisovnou) češtinu.</dd>
     <dd>Cizí termíny vždy patřičně vysvětlete, přeložte či opište. Můžete použít interaktivní slovník pojmů, např. <a var="definition-sous-vide">sous-vide</a>.</dd>
     <dd>Pozor na správné použití cizích termínů (např. <samp>au jus</samp> a nikoli <del><samp>Jus</samp></del>).</dd>
     <dd>K ověření pravopisu můžete použít <a href="http://prirucka.ujc.cas.cz/" title="Internetová jazyková příručka">internetovou příručku</a> či internet obecně. Základní kontrola pravopisu je i v prohlížeči. Ujistěte se, že je zapnutá.</dd>
-    <dt data-here="">Konzistence</dt>
+  </dl>
+  <dl class="nomultiple hideable hideable-hidden">
+    <dt>Konzistence</dt>
     <dd>Začínejte každou informaci (každý řádek v poli administrace) a každou větu velkým písmenem. Nezačínejte číslem, pokud to je možné. Jinak číslo přepište slovně (např. <samp>Tři vejce do skla</samp> a nikoli <del><samp>3 vejce do skla</samp></del>).</dd>
     <dd>Pokud si nejste jistí, jak napsat např. cenu nebo rozmezí cen, zkopírujte text např. ze stálé nabídky nebo z předchozího údaje a upravte ho.</dd>
     <dd>Za každou větou (a tedy i za popisem jídla) musí být tečka. Každá věta by měla obsahovat podmět a přísudek (nikoli jakože pokračování nadpisu).</dd>
     <dd>Vkládejte text vždy se zachováním standardní velikosti písmen. Slova psaná velkými písmeny se špatně čtou a chybně interpretují (např. <samp>VYPIL DO DNA</samp> může čtečka přečíst jako <em>„vypil do dé-en-á“</em>).</dd>
-    <dt data-here="">Typografie</dt>
+  </dl>
+  <dl class="nomultiple hideable hideable-hidden">
+    <dt>Typografie</dt>
     <dd>V anglických nadpisech patří velká písmena na začátek jednotlivých slov (např. <samp>Scotch Broth</samp>, <samp>Pepper Steak</samp>). V českých nadpisech jen na začátek (např. <samp>Hovězí vývar</samp>, <samp>Tatarský steak</samp>).</dd>
     <dd>Rozlišujte pomlčku (<samp>–</samp>) a rozdělovník (<samp>-</samp>). Pokud pomlčka rozděluje pouze dvě slova, nepatří kolem ní mezery (<samp>1.–2. května</samp>). V opačném případě kolem pomlčky mezery patří (<samp>30. dubna – 1. května</samp>).</dd>
     <dd>Rozlišujte <samp>„české“</samp> a <samp>“anglické”</samp> uvozovky a znak pro palec (<samp>"</samp>).</dd>
