--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -2,8 +2,7 @@
 <body xml:lang="cs" ns="https://www.steakgrill.cz" class="inputvar">
   <h author="InternetGuru" ctime="2015-06" id="inputvar">Administrace akční nabídky jídel</h>
   <desc kw="administrace, InputVar">Při úpravě textů dbejte na <a href="https://cs.wikipedia.org/wiki/Wikipedie:Typografick%C3%A9_rady" title="Wikipedie: Typografické rady">obecná pravidla typografie</a>, zejména pak na výčet typických nedostatků (níže). Před uložením si texty po sobě přečtěte s odstupem aspoň několika minut. Po uložení si texty projděte znovu, ideálně požádejte kolegu. Pro skrytí jídla nechte pole prázdné.</desc>
-
-  <dl class="hideable hideable-hidden">
+  <dl class="nomultiple hideable hideable-hidden">
     <dt>Terminologie a pravopis</dt>
     <dd>Minimalizujte používání cizích termínů a žargonu! V opačném případě se ujistěte, že neexistuje vhodný překlad (např. <samp>vývar</samp> a nikoli <del><samp>browth</samp></del>). Čeští čtenáři preferují srozumitelnou (spisovnou) češtinu.</dd>
     <dd>Cizí termíny vždy patřičně vysvětlete, přeložte či opište. Můžete použít interaktivní slovník pojmů, např. <a var="definition-sous-vide">sous-vide</a>.</dd>
