--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 -->
     <section class="contentbalancer-none">
       <h id="novinky">Odběr novinek</h>
-      <desc>Naše registrované zákazníky informujeme o grilovačkách a dalších pořádaných akcích. Pro registraci stačí uvést <label for="EMAIL">e-mailovou adresu</label>. Registraci je možné kdykoli zrušit. <a href="gdpr">Podmínky ochrany osobních údajů (GDPR)</a>.</desc>
+      <desc>Naše registrované zákazníky informujeme o grilovačkách a dalších pořádaných akcích. Pro registraci stačí uvést <label for="EMAIL">e-mailovou adresu</label>. Registraci je možné kdykoli zrušit.</desc>
       <form id="news" method="post" action="https://steakgrill.us15.list-manage.com/subscribe/post?u=8625178b2a66c8710f182b4d0&amp;id=f93996121e">
         <dl>
           <dt><label for="EMAIL">E-mailová adresa</label></dt>
@@ -199,6 +199,7 @@
           </dd>
           <dd><input type="submit" id="submit" class="button" value="Registrovat se k odběru"/></dd>
         </dl>
+        <p><a href="gdpr">Podmínky ochrany osobních údajů (GDPR)</a></p>
       </form>
       <h id="contact_form">Kontaktní formulář</h>
       <desc>Pošlete nám dotaz nebo zpětnou vazbu, jak se vám u nás líbilo nebo v čem bychom se mohli zlepšit. Pokud uvedete kontaktní údaje, můžete očekávat naší odpověď. <span var="inputvar-rezervace">n/a</span></desc>
