--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -29,7 +29,7 @@
   </dl>  
  
   <form class="editable fillable validable validateform-10 eventable-noevent" id="inputvarform" action="/" method="post" var="action@action">
-    <fieldset class="hideable hideable-hidden"><legend var="group">n/a</legend>
+    <fieldset class="hideable"><legend var="group">n/a</legend>
       <dl var="inputs">
         <dt>n/a</dt>
         <dd>n/a</dd>
