--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
       <dd>Otevřeno denně od 11 do 22 hodin,</dd>
       <dd>pátek a sobota do 23 hodin.</dd>
       <dt>Otevírací doba mezi svátky</dt>
-      <dd>24. 12. až 26. 12. zavřeno</dd>
-      <dd>31. 12. otevřeno do 16 hod.</dd>
-      <dd>1. 1. 2020 zavřeno</dd>
+      <dd>24. až 26. prosince zavřeno,</dd>
+      <dd>31. prosince otevřeno do 16 hod.,</dd>
+      <dd>1. ledna 2020 zavřeno.</dd>
       <dt>Informace pro hosty</dt>
       <dd>Objednávky jídel přijímáme nejpozději hodinu před koncem otevírací doby.</dd>
       <dd>Přijímáme platební karty.</dd>
