--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <dt>Otevírací doba</dt>
       <dd>Otevřeno denně od 11 do 22 hodin,</dd>
       <dd>pátek a sobota do 23 hodin.</dd>
-      <dt>Otevírací doba mezi svátky</dt>
+      <dt>Mezi svátky</dt>
       <dd>24. až 26. prosince zavřeno,</dd>
       <dd>31. prosince otevřeno do 16 hod.,</dd>
       <dd>1. ledna 2020 zavřeno.</dd>
