--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -28,7 +28,7 @@
       <dd>4 % alk. (sklo)</dd>
     </dl>
 
-    <h id="michane" class="break" title="Míchané nápoje, aperitivy a sekty…">Míchané nápoje, aperitivy a sekty</h>
+    <h id="michane" class="break" title="Míchané nápoje a aperitivy a sekty…">Míchané nápoje, aperitivy a sekty</h>
     <desc>n/a</desc>
 <!--     <desc>U obsluhy je možné si vyžádat lístek míchaních nápojů, na kterém jsou jednotlivé
 nápoje detailněji popsány včetně složení.</desc> -->
