--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -51,7 +51,7 @@
     <desc>Hamburgery připravujeme tradičně – velké a šťavnaté. Těstoviny doporučujeme jako lehčí alternativu k jídlu pro menší strávníky.</desc>
     <dl class="meal">
       <dt>Chicken Burger</dt>
-      <dd>Grilovaný marinovaný kuřecí steak, sezamová bulka, okurka, ledový salát, naše <a var="definition-bbq">BBQ</a> omáčka, hranolky, salát Coleslaw.</dd>
+      <dd>Grilovaný marinovaný kuřecí steak, sezamová bulka, okurka, ledový salát, naše <a var="definition-bbq">BBQ</a> omáčka, hranolky, salát Coleslaw. (stupeň propečení masa medium, pro změnu požádeje obsluhu)</dd>
       <dt class="price">Cena</dt>
       <dd class="price">185 Kč</dd>
     </dl>
