--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -51,27 +51,27 @@
     <desc>Hamburgery připravujeme tradičně – velké a šťavnaté. Těstoviny doporučujeme jako lehčí alternativu k jídlu pro menší strávníky.</desc>
     <dl class="meal">
       <dt>Chicken Burger</dt>
-      <dd>Grilovaný marinovaný kuřecí steak, sezamová bulka, okurka, ledový salát, naše <a var="definition-bbq">BBQ</a> omáčka, hranolky, salát Coleslaw. (stupeň propečení masa medium, pro změnu požádeje obsluhu)</dd>
+      <dd>Grilovaný marinovaný kuřecí steak, sezamová bulka, okurka, ledový salát, naše <a var="definition-bbq">BBQ</a> omáčka, hranolky, salát Coleslaw.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">185 Kč</dd>
+      <dd class="price">195 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Cheese Burger</dt>
-      <dd>Grilovaný steak z mletého hovězího krku (180 g), sezamová bulka, naše <a var="definition-bbq">BBQ</a> omáčka, sýr, rajče, slanina, ledový salát, cibule, okurka, hranolky, salát Coleslaw.</dd>
+      <dd>Grilovaný steak z mletého hovězího krku (180 g), sezamová bulka, naše <a var="definition-bbq">BBQ</a> omáčka, sýr, rajče, slanina, ledový salát, cibule, okurka, hranolky, salát Coleslaw (stupeň propečení masa medium, pro změnu požádeje obsluhu).</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">239 Kč</dd>
+      <dd class="price">249 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Chicken Penne Pomodoro</dt>
       <dd>Kuřecí prsa na nudličky (100 g), italské těstoviny s rajčatovou omáčkou a čerstvou bazalkou se smetanou, strouhaný sýr <a var="definition-grana-padano">Grana Padano</a>, olivový olej.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">169 Kč</dd>
+      <dd class="price">171 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Tagliatelle Funghi s krůtím prsem <a var="definition-sous-vide">sous-vide</a></dt>
       <dd>Italské široké nudle s delikátní omáčkou z lesních hub, krůtí prso vařené metodou <a var="definition-sous-vide">sous-vide</a> na vnitřní teplotu 57 °C (vaření ve vakuu), sýr <a var="definition-grana-padano">Grana Padano</a>, olivový olej.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">169 Kč</dd>
+      <dd class="price">175 Kč</dd>
     </dl>
 
     <h class="break" id="salatove_talire">Salátové talíře</h>
@@ -83,22 +83,22 @@
       <dt>Cobb salát</dt>
       <dd>Jeden z nejpopulárnějších salátů. Ledový salát, rajčata, avokádo, kuřecí maso, vajíčko, modrý plísňový sýr, grilovaná slanina, římský salát, pikantní Derby dresing, česneková bageta.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">209 Kč</dd>
+      <dd class="price">219 Kč</dd>
     </dl>
     <dl class="meal">
       <dt><a var="definition-caesar-salat">Caesar salát</a></dt>
-      <dd>Populární mexický salát z Tijuany. Římský salát, krutony, strouhaný sýr <a var="definition-grana-padano">Grana Padano</a>, Caesar dresing.</dd>
+      <dd>Populární mexický salát z Tijuany. Římský salát, krutony, hobliny sýru <a var="definition-grana-padano">Grana Padano</a>, Caesar dresing.</dd>
       <dt class="price">Cena</dt>
       <dd class="price multiple">
-        <span><span>malý</span><span>79 Kč</span></span>
-        <span><span>velký</span><span>121 Kč</span></span>
+        <span><span>malý</span><span>85 Kč</span></span>
+        <span><span>velký</span><span>129 Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
       <dt><a var="definition-caesar-salat">Caesar salát</a> s grilovaným kuřecím steakem</dt>
       <dd>Římský salát, krutony, strouhaný sýr <a var="definition-grana-padano">Grana Padano</a>, Caesar dresing, grilovaný steak z marinovaných kuřecích prsou.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">174 Kč</dd>
+      <dd class="price">184 Kč</dd>
     </dl>
     <!--
     <dl class="meal">
@@ -122,69 +122,69 @@
     <desc>Pro přípravu mezinárodních jídel používáme autentické nástroje. Kachní a krůtí maso vždy nakládáme či napichujeme a připravujeme metodou <a var="definition-sous-vide">sous-vide</a>.</desc>
     <dl class="meal">
       <dt>Crispy Salmon</dt>
-      <dd>Steak z chlazeného lososa upravený na olivovém oleji s extra křupavou kůží, šťouchané brambory s pórkem a slaninou, pečená cherry rajčata, náš dresing.</dd>
+      <dd>Steak z chlazeného lososa upravený na olivovém oleji s extra křupavou kůží, šťouchané brambory s pórkem a slaninou, pečená cherry rajčata, náš dresing (stupeň propečení lososa medium, pro změnu požádeje obsluhu).</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">249 Kč</dd>
+      <dd class="price">255 Kč</dd>
     </dl>
     <dl class="meal">
       <dt><a var="definition-filirovani">Filírované</a> kachní prso <a var="definition-sous-vide">sous-vide</a></dt>
       <dd>Marinované kachní prso s rozmarýnem a olivovým olejem, vařené metodou <a var="definition-sous-vide">sous-vide</a>, následně opečené. Podávané s <a var="definition-gratinovani">gratinovanými</a> bramborami, krémovým špenátem a brusinkovou omáčkou.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">209 Kč</dd>
+      <dd class="price">219 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Chicken Kung-Pao</dt>
       <dd>Podle originálního čínského receptu. Kousky kuřete restované v čínském woku se zálivkou ze sojové omáčky a sladkého bílého vína, arašídy, chilli papričky, jasmínová rýže, mrkev s rozinkami.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">189 Kč</dd>
+      <dd class="price">195 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Buffalo Wings, 400 g</dt>
       <dd>Populární americké jídlo. Kuřecí křidélka obalená v naší speciální pikantní <a var="definition-bbq">BBQ</a> omáčce, hranolky, salát Coleslaw.</dd>
       <dd>Doporučujeme česnekový dip.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">185 Kč</dd>
+      <dd class="price">189 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Chicken Cordon Bleu</dt>
       <dd>Plátky burgundské šunky a sýru Goudy uzavřené do kuřecího prsa, smažené dozlatova v trojobalu, hranolky, salát Coleslaw.</dd>
       <dd>Doporučujeme tatarskou omáčku.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">185 Kč</dd>
+      <dd class="price">189 Kč</dd>
     </dl>
 
     <h class="break" id="z_grilu_a_griddlu">Z grilu a griddlu</h>
     <desc>Grilujeme prvotřídní marinované nikdy nemražené maso. Stejně jako u steaků je grilované maso vždy odleželé na ideální teplotu (nikoli přímo z lednice).</desc>
     <dl class="meal">
       <dt>Grilovaná hovězí játra</dt>
-      <dd>Steaky z hovězích jater grilované s cibulí a slaninou, hranolky, salát Coleslaw.</dd>
+      <dd>Steaky z hovězích jater grilované s cibulí a slaninou, hranolky, salát Coleslaw (stupeň propečení jater medium, pro změnu požádeje obsluhu).</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">169 Kč</dd>
+      <dd class="price">179 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Grilovaný vepřový šašlik</dt>
       <dd>Marinovaná vepřová panenka grilovaná na špízu s cibulí a paprikou, zakončené rajčetem a žampionem, hranolky, salát Coleslaw.</dd>
       <dd>Doporučujeme <a var="definition-bbq">BBQ</a> dip.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">189 Kč</dd>
+      <dd class="price">199 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Grilovaná panenka Madagaskar</dt>
       <dd>Grilovaná panenka v celku, krájená na medailonky, smetanová omáčka s madagaskarským pepřem, <a var="definition-gratinovani">gratinované</a> brambory, krémový špenát.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">249 Kč</dd>
+      <dd class="price">255 Kč</dd>
     </dl>
     <dl class="meal">
       <dt><a var="definition-bbq">BBQ</a> Baby Back Ribs</dt>
       <dd>Vepřová žebírka grilovaná v naší pikantní <a var="definition-bbq">BBQ</a> omáčce, hranolky, česnekový dresing.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">249 Kč</dd>
+      <dd class="price">259 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Grill Mix</dt>
       <dd>Grilovaná vepřová panenka, hovězí játra, marinované kuřecí prso, slanina, šťouchané brambory s pórkem a slaninou, sázené vajíčko, <a var="definition-bbq">BBQ</a> dip, žampion, cibule, kukuřice O’Brien.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">234 Kč</dd>
+      <dd class="price">249 Kč</dd>
     </dl>
 
     <h class="break" id="grilovane_steaky">Grilované steaky</h>
@@ -227,9 +227,9 @@
     <desc>Nabízíme osvědčené restaurační dezerty, které sami vyrábíme podle autentických receptur. Dezerty připravujeme na objednávku, proto jsou vždy čerstvé a prvotřídní.</desc>
     <dl class="meal">
       <dt>Hot Chocolate <a var="definition-fondant">Fondant</a></dt>
-      <dd>Horký čokoládový <a var="definition-fondant">fondant</a> s dokonalou pistáciovou zmrzlinou Angelato a višněmi. (Příprava cca 15 minut.)</dd>
+      <dd>Horký čokoládový <a var="definition-fondant">fondant</a> s dokonalou pistáciovou zmrzlinou Angelato a višněmi. (Příprava cca 20 minut.)</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">119 Kč</dd>
+      <dd class="price">125 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Bananas foster</dt>
@@ -251,21 +251,22 @@
     </dl>
     <dl class="meal">
       <dt>Kaiserschmarrn</dt>
-      <dd>Císařský trhanec s teplou jahodovou omáčkou.</dd>
+      <dd>Císařský trhanec s teplou meruňkovou omáčkou a vanilkovou zmrzlinou.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">69 Kč</dd>
+      <dd class="price">89 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Creme brulée</dt>
       <dd>Pečený smetanový žloutkový krém s pravou vanilkou a karamelovou krustou.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">69 Kč</dd>
+      <dd class="price">75 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Výběrové kopečkové zmrzliny se šlehačkou</dt>
       <dd>Čokoládová, vanilková, jahodová, pistáciová.</dd>
+      <dd>Angelato pistáciová.</dd>
       <dt class="price">Cena</dt>
-      <dd class="price">33 Kč</dd>
+      <dd class="price">35 Kč</dd>
     </dl>
 
     <h class="break" id="detska_jidla">Dětská jídla</h>
