--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -263,10 +263,12 @@
     </dl>
     <dl class="meal">
       <dt>Výběrové kopečkové zmrzliny se šlehačkou</dt>
-      <dd>Čokoládová, vanilková, jahodová, pistáciová.</dd>
-      <dd>Angelato pistáciová.</dd>
+      <dd>Čokoládová, vanilková, jahodová.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">35 Kč</dd>
+      <dd>Angelato pistáciová.</dd>
+      <dt class="price">Cena</dt>
+      <dd class="price">50 Kč</dd>
     </dl>
 
     <h class="break" id="detska_jidla">Dětská jídla</h>
