--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
   <h id="napojovy_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/beverages">Nápojový lístek</h>
-  <desc>Naše domácí limonády z čerstvého ovoce Vás osvěží za horkého dne a náš připravovaný pečený čaj zahřeje v sychravém počasí. Pivařům čepujeme Plzeň s občasnou nabídkou piv z malých pivovarů a nezaostáváme v širší nabídce kvalitních rumů.</desc>
+  <desc>Naše domácí limonády z čerstvého ovoce Vás osvěží za horkého dne a náš připravovaný pečený čaj zahřeje v sychravém počasí. Pivařům čepujeme Staropramen s nabídkou piv z malých pivovarů a nezaostáváme v širší nabídce kvalitních rumů.</desc>
   <section class="contenttoc">
     <h id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
-      <dt>Pilsner Urquell točené <span>0,3 l</span></dt>
-      <dd class="price">30 Kč</dd>
-      <dt>Pilsner Urquell točené <span>0,5 l</span></dt>
-      <dd class="price">45 Kč</dd>
-      <dt>Staropramen 11° točené <span>0,3 l</span></dt>
-      <dd class="price">25 Kč</dd>
-      <dt>Staropramen 11° točené <span>0,5 l</span></dt>
-      <dd class="price">35 Kč</dd>
+      <dt>Extra chmelená 12° točené <span>0,4 l</span></dt>
+      <dd class="price">40 Kč</dd>
+      <dt>Speciál z minipivovaru<span>0,3 l a 0,5 l</span></dt>
+      <dd>dle aktuální nabídky</dd>
       <dt>Staropramen nealko točené <span>0,3 l</span></dt>
-      <dd class="price">25 Kč</dd>
+      <dd class="price">30 Kč</dd>
       <dt>Staropramen nealko točené <span>0,5 l</span></dt>
-      <dd class="price">35 Kč</dd>
+      <dd class="price">40 Kč</dd>
       <dt>Stella Artois nealko (sklo) <span>0,33 l</span></dt>
       <dd class="price">33 Kč</dd>
       <dt>Guinness (plech) <span>0,44 l</span></dt>
       <dd class="price">48 Kč</dd>
       <dd>Irské černé pivo</dd>
-      <dt>Carling British Cider Cherry <span>0,3 l</span></dt>
-      <dd class="price">45 Kč</dd>
-      <dd>4 % alk. (sklo)</dd>
+      <dt>Hoegaarden (sklo) <span>0,33 l</span></dt>
+      <dd class="price">40 Kč</dd>
+      <dd>Pšeničné belgické pivo</dd>
+      <dt>Pilsner Urquell (sklo) <span>0,33 l</span></dt>
+      <dd class="price">35 Kč</dd>
     </dl>
 
     <h id="michane" class="break" title="Míchané nápoje a aperitivy a sekty…">Míchané nápoje, aperitivy a sekty</h>
