--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -8,7 +8,7 @@
     <dl class="meal meal-oneline">
       <dt>Extra chmelená 12° točené <span>0,4 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dt>Speciál z minipivovaru<span>0,3 l a 0,5 l</span></dt>
+      <dt>Speciál z minipivovaru <span>0,3 l a 0,5 l</span></dt>
       <dd>dle aktuální nabídky</dd>
       <dt>Staropramen nealko točené <span>0,3 l</span></dt>
       <dd class="price">30 Kč</dd>
@@ -53,7 +53,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
-      <dt>Gancia Prosecco <a var="definition-doc">DOC</a>, Brut <span>0,1 l</span></dt>
+      <dt>CONCA d´ORO Prosecco Millesimata cuvée DOC<a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
       <dd class="price">60 Kč</dd>
       <dt>Gancia Prosecco <a var="definition-doc">DOC</a>, Brut <span>0,75 l</span></dt>
       <dd class="price">350 Kč</dd>
