--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -53,7 +53,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
-      <dt>CONCA d´ORO Prosecco Millesimata cuvée DOC<a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
+      <dt>Prosecco CONCA d´ORO Millesimata cuvée <a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
       <dd class="price">60 Kč</dd>
       <dt>Gancia Prosecco <a var="definition-doc">DOC</a>, Brut <span>0,75 l</span></dt>
       <dd class="price">350 Kč</dd>
