--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -55,7 +55,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">50 Kč</dd>
       <dt>Prosecco Conca d´ORO Gio Cuvée <a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
       <dd class="price">60 Kč</dd>
-      <dd>Extra dry <span>0,75 l</span></dd>
+      <dd Extra dry <span>0,75 l</span></dd>
       <dd class="price">290 Kč</dd>
       <dt>Prosecco Conca d´ORO Millesimato Cuvée <a var="definition-doc">DOC</a>, Extra dry <span>0,75 l</span></dt>
       <dd class="price">370 Kč</dd>
