--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -53,11 +53,14 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
-      <dt>Prosecco Conca d´ORO Gio Cuvée <a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
+      <dt>Prosecco Conca d´ORO </dt>
+      <dt>Gio Cuvée DOC <a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
       <dd class="price">60 Kč</dd>
-      <dt>Prosecco Conca d´ORO Millesimato Cuvée <a var="definition-doc">DOC</a>, Extra dry <span>0,75 l</span></dt>
+      <dt>Gio Cuvée DOC <a var="definition-doc">DOC</a>, Extra dry <span>0,75 l</span></dt>
+      <dd class="price">290 Kč</dd
+      <dt>Millesimato Cuvée DOC <a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
       <dd class="price">370 Kč</dd>
-      <dt>Prosecco Conca d´ORO Vldobbiadene Superiore DOCG <a var="definition-doc">DOCG</a>, Extra dry <span>0,75 l</span></dt>
+      <dt>Valdobbiadene Superiore DOCG <a var="definition-doc">DOCG</a>, Extra dry <span>0,75 l</span></dt>
       <dd class="price">550 Kč</dd> 
       <dt>Louis Perdrier <span>0,75 l</span></dt>
       <dd class="price">240 Kč</dd>
