--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -57,11 +57,13 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Gio Cuvée DOC <a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
       <dd class="price">60 Kč</dd>
       <dt>Gio Cuvée DOC <a var="definition-doc">DOC</a>, Extra dry <span>0,75 l</span></dt>
-      <dd class="price">290 Kč</dd
+      <dd class="price">290 Kč</dd>
       <dt>Millesimato Cuvée DOC <a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
       <dd class="price">370 Kč</dd>
-      <dt>Valdobbiadene Superiore DOCG <a var="definition-doc">DOCG</a>, Extra dry <span>0,75 l</span></dt>
-      <dd class="price">550 Kč</dd> 
+      <dt>Valdobbiadene Superiore DOCG <a var="definition-doc">DOCG</a>, Brut <span>0,75 l</span></dt>
+      <dd class="price">550 Kč</dd>
+      <dt>VEDOVA Valdobbiadene Superiore DOCG <a var="definition-doc">DOCG</a>, Brut <span>0,75 l</span></dt>
+      <dd class="price">550 Kč</dd>
       <dt>Louis Perdrier <span>0,75 l</span></dt>
       <dd class="price">240 Kč</dd>
       <dd>Demi Sec nebo Brut (oblast Francie)</dd>
