--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -54,15 +54,15 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
       <dt>Prosecco Conca d´ORO </dt>
-      <dt>Gio Cuvée DOC <a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
+      <dt>Gio Cuvée <a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
       <dd class="price">60 Kč</dd>
-      <dt>Gio Cuvée DOC <a var="definition-doc">DOC</a>, Extra dry <span>0,75 l</span></dt>
+      <dt>Gio Cuvée <a var="definition-doc">DOC</a>, Extra dry <span>0,75 l</span></dt>
       <dd class="price">290 Kč</dd>
-      <dt>Millesimato Cuvée DOC <a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
+      <dt>Millesimato Cuvée <a var="definition-doc">DOC</a>, Extra dry <span>0,1 l</span></dt>
       <dd class="price">370 Kč</dd>
-      <dt>Valdobbiadene Superiore DOCG <a var="definition-doc">DOCG</a>, Brut <span>0,75 l</span></dt>
+      <dt>Valdobbiadene Superiore <a var="definition-doc">DOCG</a>, Brut <span>0,75 l</span></dt>
       <dd class="price">550 Kč</dd>
-      <dt>VEDOVA Valdobbiadene Superiore DOCG <a var="definition-doc">DOCG</a>, Brut <span>0,75 l</span></dt>
+      <dt>VEDOVA Valdobbiadene Superiore <a var="definition-doc">DOCG</a>, Brut <span>0,75 l</span></dt>
       <dd class="price">550 Kč</dd>
       <dt>Louis Perdrier <span>0,75 l</span></dt>
       <dd class="price">240 Kč</dd>
