--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -78,18 +78,17 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">65 Kč</dd>
       <dt>Coca-Cola <span>0,33 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dd>(original, light, zero)</dd>
+      <dd>(original, zero lemon, zero)</dd>
       <dt>Fanta pomeranč <span>0,33 l</span></dt>
       <dd class="price">40 Kč</dd>
       <dt>Sprite <span>0,33 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dt>Kinley tonic <span>0,25 l</span></dt>
+      <dt>Kinley <span>0,25 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dt>Kinley zázvor <span>0,25 l</span></dt>
-      <dd class="price">40 Kč</dd>
+      <dd>(tonic water, ginger, rose)</dd>
       <dt>Cappy <span>0,25 l</span></dt>
       <dd class="price">40 Kč</dd>
-      <dd>(pomeranč, jahoda, multivitamín, černý rybíz, hruška, jablko)</dd>
+      <dd>(pomeranč 100%, jahoda, multivitamín, černý rybíz, hruška, jablko)</dd>
       <dt>Bonaqua <span>0,25 l</span></dt>
       <dd class="price">30 Kč</dd>
       <dd>(perlivá, jemně perlivá, neperlivá)</dd>
@@ -97,7 +96,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
 <!--       <dd class="price">60 Kč</dd> -->
       <dt>Romerquelle <span>0,33 l</span></dt>
       <dd class="price">35 Kč</dd>
-      <dd>(perlivá, neperlivá)</dd>
+      <dd>(perlivá, neperlivá, lemon grass)</dd>
       <dt>Romerquelle <span>0,75 l</span></dt>
       <dd class="price">70 Kč</dd>
       <dd>(perlivá, neperlivá)</dd>
@@ -105,7 +104,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">40 Kč</dd>
       <dd>(zelený s mangem a heřmánkem, černý s broskví a ibiškem)</dd>
       <dt>Karafa s vodou a citronem <span>1 l</span></dt>
-      <dd class="price">45 Kč</dd>
+      <dd class="price">65 Kč</dd>
     </dl>
 
     <h id="horke" class="break" title="Horké nápoje, káva a čaj…">Horké nápoje, káva a čaj</h>
