--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -131,8 +131,8 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">70 Kč</dd>
       <dt>Frappé</dt>
       <dd class="price">45 Kč</dd>
-      <dt>Sypané čaje montecelio </dt>
-      <dd class="price">47 Kč</dd>
+      <dt>Sypané čaje </dt>
+      <dd class="price">49 Kč</dd>
       <dd>(ovocný, černý – Earl Grey, rooibos, zelený)</dd>
       <dt>Zázvorový čaj</dt>
       <dd class="price">60 Kč</dd>
@@ -168,6 +168,8 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">80 Kč</dd>
       <dt>Kraken Black Spiced</dt>
       <dd class="price">50 Kč</dd>
+      <dt>Demon´s Share </dt>
+      <dd class="price">100 Kč</dd>      
       <dt>Don Papa</dt>
       <dd class="price">100 Kč</dd>
       <dt>Legendario Elixir 7 <a var="definition-yo">YO</a></dt>
@@ -195,7 +197,11 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Slivovice</dt>
       <dd class="price">50 Kč</dd>
-      <dt>Tanquearay</dt>
+      <dt>Tanquearay Gin</dt>
+      <dd class="price">60 Kč</dd>
+      <dt>Bulldog Gin</dt>
+      <dd class="price">60 Kč</dd>
+      <dt>Broker´s pink Gin</dt>
       <dd class="price">60 Kč</dd>
       <dt>Fernet / Fernet Citrus</dt>
       <dd class="price">35 Kč</dd>
