--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -6,11 +6,11 @@
     <h id="sekty" title="Sekty a Prosecco…">Sekty a Prosecco</h>
     <desc>n/a</desc>
     <dl class="meal">
-      <dt>Louis Perdier Demi Sec</dt>
+      <dt>Louis Perdier Demi Sec 0,75 l</dt>
       <dd>Oblast Francie, Odrůda UgniBlanc.</dd>
-      <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a množstvím jemných bublinek. Svěží ovocná a květinová vůně s náznaky citrusového ovoce. Mladé víno jemně nasládlé chuti s vyváženou šumivostí.</dd>
+      <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a množstvím jemných bublinek. Svěží ovocná a květinová vůně s náznaky citrusového ovoce.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>240 Kč</span></span>
+        <span>290 Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
@@ -18,13 +18,13 @@
       <dd>Oblast Francie, Odrůda Ugni Blanc, Chenin, Folle Blanche.</dd>
       <dd>Sekt světle žluté barvy s náznaky dozelena. S množstvím jemných bublinek. Svěží jemná vůně s jemným aroma žlutého ovoce. Elegantní víno vybalancované chuti. K vychutnání pro slavnostní příležitosti.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>240 Kč</span></span>
+        <span><span>0,75 l</span><span>290 Kč</span></span>
       </dd>
     </dl>
 
     <dl class="meal">
-      <dt>Bepin de Eto Millesimato, Conegliano Valdobbiadene Prosecco Superiore <a var="definition-docg">DOCG</a>, Extra Dry</dt>
-      <dd>Světle slámově žlutá barva se zelenkavými odlesky. Delikátní vůně čerstvě upečeného chleba, kterou doplňují tóny jablek, hrušek a meruněk. V závěru vůně růží a akátu. Velmi jemné a sametové víno s lehce sladkou chutí, která se harmonicky snoubí s kyselejší chutí připomínající limetovou šťávu.</dd>
+      <dt> Millesimato Spumante Brut, Conegliano Valdobbiadene Prosecco Superiore <a var="definition-docg">DOCG</a>, Brut</dt>
+      <dd>Světle zlatavá barva, krásná vůně připomínající zahradní ovoce a květiny. Chuť je svěží , šťavnatá, ovocná a plná s příjemnou dochutí šťavnaté kyselinky.</dd>
       <dd class="price">
         <span><span>0,75 l</span><span>600 Kč</span></span>
       </dd>
