--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -10,7 +10,7 @@
       <dd>Oblast Francie, Odrůda UgniBlanc.</dd>
       <dd>Sekt světle žluté barvy se zelenými tóny, lahodnou pěnou a množstvím jemných bublinek. Svěží ovocná a květinová vůně s náznaky citrusového ovoce.</dd>
       <dd class="price">
-        <span><span>0,75 l</span><span>290 Kč</span></span>
+        <span><span></span><span>290 Kč</span></span>
       </dd>
     </dl>
     <dl class="meal">
